2001-04-22  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Handle .zip files. Source files with an unknown
	extension are copied to the unpacking directory. Check build
	directory for existence.

2001-04-20  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_install): Remove dir files in the info
	directories (was removed during the dpkg move).

2001-04-14  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm: Changed internals of real_install. The first
	parameter to real_install is now one of the defined constants
	designating an operation. New commands: rebuild, reinstall.

	* PkgVersion.pm: Create DEBIAN directory during install
	phase. Mark essential packages as essential in dpkg control file.

2001-04-12  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (real_install): Don't deactivate older revisions of a
	package before installing the new revision. dpkg takes care of
	upgrading itself, and refuses to violate dependencies.

2001-04-11  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Handle duplicate package descriptions in
	different directories.
	* Package.pm (add_version): Merge info if version is already
	present.

2001-04-10  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm: Use the new scan_all method.
	* Package.pm: Added method scan_all to scan all trees listed in
	the config file.
	* Config.pm: Added method get_treelist.

2001-04-05  Christoph Pfisterer  <cp@chrisp.de>

	* Config.pm: New variable $libpath, pointing at the directory for
	support files.
	* Configure.pm: Removed umask code. Use $libpath. Fixed wrong
	method call.
	* Engine.pm: Removed umask code. Call Fink::Package->scan on the
	correct directory in the new layout (temporary, hardcoded
	solution).
	* Package.pm (scan): Use File::Find to recursively search
	directories. Read all files with the extension '.info'. Pass the
	filename to the PkgVersion object for processing.
	* PkgVersion.pm: Use $libpath. Use the description file path