@@ -1,3 +1,11 @@
+2001-04-24  Christoph Pfisterer  <cp@chrisp.de>
+
+	* Bootstrap.pm: Fetch all packages at the beginning of the
+	bootstrap.
+	* Engine.pm: Renamed cmd_fetch_missing to
+	cmd_fetch_all_missing. New routine cmd_fetch_missing that takes a
+	package list.
+
 2001-04-22  Christoph Pfisterer  <cp@chrisp.de>
 
 	* PkgVersion.pm: Handle .zip files. Source files with an unknown
